<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/item_place"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/label"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/congestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/place"
        android:layout_marginTop="20dp"
        android:text="@string/title_congestion"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/daySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/congestion"
        android:layout_alignTop="@id/congestion"
        android:layout_marginStart="5dp"
        android:entries="@array/day"/>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/bar_chart"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/congestion"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/evaluation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bar_chart"
        android:layout_marginTop="20dp"
        android:text="@string/title_evaluation"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/evaluation"
        android:layout_marginTop="20dp"
        android:weightSum="1"
        android:orientation="horizontal">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/circle_clean"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_weight="0.5"/>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/circle_equipment"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_weight="0.5"/>

    </LinearLayout>

    <Button
        android:id="@+id/do_eva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/chart"
        android:layout_marginTop="20dp"
        android:text="@string/do_evaluation"/>


</RelativeLayout>